--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="container">
         <button id="openModalBtn"class="burger-menu" onclick="openModal()">
           <svg class="menu-icon" width="34" height="20">
-            <use href="../images/icons.svg#icon-menu"></use>
+            <use href="./images/icons.svg#icon-menu"></use>
           </svg>
         </button>
         
@@ -42,16 +42,16 @@
 
           <ul class="social-list">
             <li class="social-list-item"><svg class="social-icon" width="30" height="30">
-            <use href="../images/icons.svg#icon-tel"></use>
+            <use href="./images/icons.svg#icon-tel"></use>
           </svg>
         </li>
             <li class="social-list-item"><svg class="social-icon" width="30" height="30">
-            <use href="../images/icons.svg#icon-insta"></use>
+            <use href="./images/icons.svg#icon-insta"></use>
           </svg>
         </li>
             <li class="social-list-item">
               <svg class="social-icon" width="30" height="30">
-            <use href="../images/icons.svg#icon-fb"></use>
+            <use href="./images/icons.svg#icon-fb"></use>
           </svg>
             </li>
           </ul>
@@ -78,7 +78,7 @@
           <p id="closeModalBtn2" class="menu-title" onclick="closeModal()">Меню</p>
             <button id="closeModalBtn" class="modal-close-btn" type="button" onclick="closeModal()">
             <svg class="header-icon" width="22" height="22">
-              <use href="../images/icons.svg#icon-plus" >
+              <use href="./images/icons.svg#icon-plus" >
 
               </use>
           </svg>
