--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           >
         </h1>
         <div class="hero-btn-wrapper">
-          <h2>РЕШЕНИЕ ЛЮБОГО ЗАПРОСА ЗА 3 СЕАНСА</h2>
+          <h4>РЕШЕНИЕ ЛЮБОГО ЗАПРОСА ЗА 3 СЕАНСА</h4>
           <button class="hero-btn" type="button">
             Записаться на консультацию
           </button>
@@ -74,11 +74,13 @@
       </section>
       <section class="about">
         <h2 class="about-title">Обо мне</h2>
-        <img
-          src="./images/mobile/about@mob.png"
-          alt="Смоквина Ирина"
-          class="about-image"
-        />
+        <div class="about-img-wrapper">
+          <img
+            src="./images/mobile/about@mob.png"
+            alt="Смоквина Ирина"
+            class="about-image"
+          />
+        </div>
         <p class="about-text">
           С самого детства я люблю учиться, исследовать мир и помогать людям.
           Больше всего меня интересовали квантовая физика, психогенетика и
@@ -87,7 +89,7 @@
           управлении я создала свою авторскую Технологию Эффективных Мгновенных
           Преображений личности.
         </p>
-        <p class="about-more">Подробнее</p>
+        <button class="about-more" type="button">Подробнее</button>
       </section>
       <section class="benefits">
         <ul class="benefits-list">
@@ -104,6 +106,7 @@
             <div class="item-field-info">дипломов и патентов</div>
           </li>
         </ul>
+        <div class="benefits-magnolia"></div>
       </section>
       <section class="help">
         <h2 class="help-title">В чем я могу Вам помочь?</h2>
