--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
         <h2 class="help-title">В чем я могу Вам помочь?</h2>
         <ul class="help-list">
           <li class="help-item">
-            <div class="help-item-image"></div>
+            <img
+              src="./images/mobile/head1@mobile.png"
+              alt=""
+              class="help-item-image"
+            />
             <div class="help-item-info">
               <h3 class="help-item-title">БИЗНЕС, КАРЬЕРА</h3>
               <p class="help-item-content">
@@ -122,7 +126,11 @@
             </div>
           </li>
           <li class="help-item">
-            <div class="help-item-image"></div>
+            <img
+              src="./images/mobile/head2@mobile.png"
+              alt=""
+              class="help-item-image"
+            />
             <div class="help-item-info">
               <h3 class="help-item-title">здоровье</h3>
               <p class="help-item-content">
@@ -131,7 +139,11 @@
             </div>
           </li>
           <li class="help-item">
-            <div class="help-item-image"></div>
+            <img
+              src="./images/mobile/head3@mobile.png"
+              alt=""
+              class="help-item-image"
+            />
             <div class="help-item-info">
               <h3 class="help-item-title">личностный рост</h3>
               <p class="help-item-content">
@@ -141,7 +153,11 @@
             </div>
           </li>
           <li class="help-item">
-            <div class="help-item-image"></div>
+            <img
+              src="./images/mobile/head4@mobile.png"
+              alt=""
+              class="help-item-image"
+            />
             <div class="help-item-info">
               <h3 class="help-item-title">отношения</h3>
               <p class="help-item-content">
@@ -151,12 +167,30 @@
             </div>
           </li>
         </ul>
+        <img
+          src="./images/mobile/magnoliya-help@mobile.png"
+          alt=""
+          class="help-magnolia"
+        />
       </section>
       <section class="consult-test">
         <div class="consult-test-wrapper">
-          <div class="h2 consult-test-title"></div>
-          <div class="consult-test-content"></div>
-          <button class="consult-test-button" type="button">Пройти тест</button>
+          <img
+            src="./images/mobile/buterfly@mobile.png"
+            alt=""
+            class="consult-logo"
+          />
+          <h2 class="consult-test-title">
+            какой тип консультации подходит тебе ?
+          </h2>
+          <div class="consult-test-content">
+            Пройди бесплатный тест и узнай себя лучше! Этот тест поможет
+            разобраться какой тип консультации подойдет именно Тебе. Получи
+            подарок за первый шаг навстречу к себе!
+          </div>
+          <button class="consult-test-button hero-btn" type="button">
+            Пройти тест
+          </button>
         </div>
       </section>
       <section class="methods">
