--- a/index.html
+++ b/index.html
@@ -174,6 +174,13 @@
         />
       </section>
       <section class="consult-test">
+        <svg class="svg">
+          <clipPath id="my-clip-path" clipPathUnits="objectBoundingBox">
+            <path
+              d="M0.008,0.062 C0.008,0.028,0.024,0.001,0.044,0 L0.504,0 L0.957,0 C0.977,0.001,0.994,0.028,0.994,0.062 L1,0.506 L0.994,0.938 C0.994,0.972,0.977,0.999,0.957,1 L0.504,1 L0.044,1 C0.024,0.999,0.008,0.972,0.008,0.938 L0,0.492 L0.008,0.062"
+            ></path>
+          </clipPath>
+        </svg>
         <div class="consult-test-wrapper">
           <img
             src="./images/mobile/buterfly@mobile.png"
@@ -197,31 +204,34 @@
         <div class="methods-wrapper">
           <div class="methods-hero-image"></div>
           <h2 class="methods-title">основа моего подхода</h2>
-          <ul class="methods-list">
-            <li class="methods-item">
-              Использование в работе авторской технологии ТЭМП© Технологии
-              Эффективных Мгновенных Преображений
-            </li>
-            <li class="methods-item">
-              Восстановление связи с самим собой, раскрытие скрытых ресурсов и
-              резервов
-            </li>
-            <li class="methods-item">
-              Решение проблемы/запроса в точке её формирования
-            </li>
-            <li class="methods-item">
-              Выстраивание Жизнненого пути на основе Личной Миссии
-              (Предназначения)
-            </li>
-            <li class="methods-item">
-              На каждом этапе взаимодействия – быстрый и гарантированный
-              результат
-            </li>
-            <li class="methods-item">
-              Моделирование уникального алгоритма психотерапии, исходя из
-              характера запроса и индивидуальных особенностей клиента
-            </li>
-          </ul>
+          <div class="methods-list-wrapper">
+            <!-- <img src="./images/mobile/Rectangle.svg" alt="" /> -->
+            <ul class="methods-list">
+              <li class="methods-item">
+                Использование в работе авторской технологии ТЭМП© Технологии
+                Эффективных Мгновенных Преображений
+              </li>
+              <li class="methods-item">
+                Восстановление связи с самим собой, раскрытие скрытых ресурсов и
+                резервов
+              </li>
+              <li class="methods-item">
+                Решение проблемы/запроса в точке её формирования
+              </li>
+              <li class="methods-item">
+                Выстраивание Жизнненого пути на основе Личной Миссии
+                (Предназначения)
+              </li>
+              <li class="methods-item">
+                На каждом этапе взаимодействия – быстрый и гарантированный
+                результат
+              </li>
+              <li class="methods-item">
+                Моделирование уникального алгоритма психотерапии, исходя из
+                характера запроса и индивидуальных особенностей клиента
+              </li>
+            </ul>
+          </div>
           <button class="methods-button" type="button">Попробуй сейчас</button>
         </div>
       </section>
